# aviutl2-sdk-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  mise.toml
.github/workflows/: ci.yaml
examples/: CMakeLists.txt
examples/AviReader/: AviReader.cpp  CMakeLists.txt
examples/AviSaver/: AviSaver.cpp  CMakeLists.txt
examples/MediaFilter/: CMakeLists.txt  MediaFilter.cpp
examples/MediaObject/: CMakeLists.txt  MediaObject.cpp
examples/ScriptModule/: CMakeLists.txt  ScriptModule.cpp
examples/WindowClient/: CMakeLists.txt  WindowClient.cpp
examples/skeleton_generic_plugin/: CMakeLists.txt  skeleton_generic_plugin.cpp
examples/skeleton_input_plugin/: CMakeLists.txt  skeleton_input_plugin.cpp
examples/skeleton_output_plugin/: CMakeLists.txt  skeleton_output_plugin.cpp
examples/skeleton_script_module/: CMakeLists.txt  skeleton_script_module.cpp
include/aviutl2_sdk_cpp/: cache.hpp  common.hpp  config.hpp  edit.hpp  filter.hpp  generic.hpp  input.hpp  logger.hpp  module.hpp  output.hpp  raw.hpp  utils.hpp  windows.hpp
include/aviutl2_sdk_cpp/raw/: cache.hpp  config.hpp  filter.hpp  input.hpp  logger.hpp  module.hpp  output.hpp  plugin.hpp
tests/: CMakeLists.txt
tests/enum_utils_tests/: CMakeLists.txt  enum_utils_tests.cpp
tests/filter_items_tests/: CMakeLists.txt  filter_items_tests.cpp
tests/header_check/: CMakeLists.txt  header_check.cpp
tests/make_fourcc_tests/: CMakeLists.txt  make_fourcc_tests.cpp
tests/valid_filter_plugin_tests/: CMakeLists.txt  valid_filter_plugin_tests.cpp
tests/valid_generic_plugin_tests/: CMakeLists.txt  valid_generic_plugin_tests.cpp
tests/valid_input_plugin_tests/: CMakeLists.txt  valid_input_plugin_tests.cpp
tests/valid_output_plugin_tests/: CMakeLists.txt  valid_output_plugin_tests.cpp
tests/valid_script_module_tests/: CMakeLists.txt  valid_script_module_tests.cpp
