add_subdirectory(AviReader)
add_subdirectory(AviSaver)
add_subdirectory(MediaFilter)
add_subdirectory(MediaObject)
add_subdirectory(ScriptModule)
add_subdirectory(WindowClient)

add_subdirectory(skeleton_input_plugin)
add_subdirectory(skeleton_output_plugin)
add_subdirectory(skeleton_script_module)
